# spider2

./: .dockerignore  .gitattributes  .gitignore  CMakeLists.txt  README.md  containers.md  vcpkg.json
.github/workflows/: build-docs.yml  build-run-tests.yml
containers/spider2-build/: Dockerfile  docker-compose.yml
containers/spider2-build-14/: Dockerfile  docker-compose.yml
containers/spider2-build/overlays/python3/: vcpkg.json
containers/spider2-tests/: Dockerfile  docker-compose.yml  run-all-tests.sh
docs/: docusaurus.config.js
docs/docs/: intro.md
docs/src/components/HomepageFeatures/: index.js
docs/src/css/: custom.css
docs/src/pages/: index.js
fuzz/: .gitignore  CMakeLists.txt  README.md  build.sh  fuzz_multipart.cpp  fuzz_multipart_stream.cpp  multipart.dict
fuzz/corpus/: end_only  regress-empty-boundary-1  regress-empty-boundary-2  regress-empty-boundary-3  regress-empty-boundary-4  regress-empty-boundary-5  regress-neg-size-shortboundary  regress-overadvance-buffer-to-front  regress-truncated-delim-realboundary  valid_simple
fuzz/corpus_stream/: large-valid-many-parts  regress-onstream-overread
spider2/: CMakeLists.txt  main.cpp
spider2-api/: CMakeLists.txt
spider2-api/examples/: CMakeLists.txt
spider2-api/examples/spider2-api_scoping/: CMakeLists.txt  Dockerfile  index.html  index.md  main.cpp
spider2-api/examples/tutorial/: CMakeLists.txt  intro.cpp
spider2-api/include/spider2/: api.h
spider2-api/include/spider2/api/: from_body.h  from_query.h  op_result.h  result.h
spider2-api/include/spider2/api/from_body/: from_body.h  parser.h
spider2-api/include/spider2/api/from_query/: from_query.h  parser.h  query_args.h
spider2-api/include/spider2/api/op_result/: flat_value.h  op_field_msg.h  op_msg.h  op_result.h
spider2-api/include/spider2/api/result/: formatter.h  is_api_result.h
spider2-api/include/spider2/api/support/: config.h
spider2-api/include/spider2/api/support/boost_json/: support_decl.h  support_impl.h  use_boost_json.h
spider2-api/include/spider2/api/support/commons_serialization/: support_decl.h  support_impl.h  use_commons_serialization.h
spider2-api/tests/: api_args_value_passing_tests.cpp  main.cpp  old_spider_serialization_test.cpp  op_result_tests.cpp  parallel_connection_request_tests.cpp  query_args_tests.cpp  result_tests.cpp
spider2-compress/: CMakeLists.txt
spider2-compress/include/spider2/middleware/: compress.h
spider2-compress/src/: compress.cpp
spider2-compress/tests/: compresss_tests.cpp  main.cpp
spider2-prometheus/: CMakeLists.txt
spider2-prometheus/spider2/: prometheus.h  prometheus_parser.h
spider2-prometheus/src/: prometheus.cpp  prometheus_parser.cpp
spider2-prometheus/tests/: main.cpp  prometheus_parser_tests.cpp  prometheus_tests.cpp
spider2-proxy/: CMakeLists.txt
spider2-proxy/examples/: main.cpp
spider2-proxy/include/spider2/: proxy.h
spider2-react/: CMakeLists.txt
spider2-react/examples/: main.cpp
spider2-react/examples/example_app/: package-lock.json
spider2-react/examples/example_app/src/: App.js
spider2-react/include/spider2/: react.h
spider2-testing/: CMakeLists.txt
spider2-testing/include/spider2/: testing.h
spider2-testing/include/spider2/testing/: process_request.h
spider2-testing/tests/: main.cpp
spider2-tracy/: CMakeLists.txt
spider2-tracy/examples/: main.cpp
spider2-tracy/include/spider2/: tracy.h
spider2/examples/websockets/: CMakeLists.txt  main.cpp
spider2/examples/websockets/site/: index.html
spider2/include/spider2/: asio.h  handlers.h  routing.h  server.h  spider2.h  types.h
spider2/include/spider2/concepts/: middleware.h
spider2/include/spider2/handlers/: static_files.h  sync_handler.h  websocket.h
spider2/include/spider2/middleware/: allow_origin_middleware.h  cache_middleware.h  cors_middleware.h  exception_handling_middleware.h  make_async_execution_handler.h  thread_pool_middleware.h
spider2/include/spider2/routing/: api_endpoint_handler.h  endpoint_handler.h  nested_router.h  router.h  scoped_router.h
spider2/include/spider2/routing/api_endpoint/: api_endpoint.h  format_api_response.h  parse_api_request.h  read_api_request.h
spider2/include/spider2/types/: platform.h  results.h  structs.h  utils.h
spider2/include/spider2/types/platform/: asio.h  http.h  std_types.h
spider2/include/spider2/types/results/: return_file.h
spider2/include/spider2/types/structs/: any_message_body.h  app_context_base.h  byte_range.h  cache_backend.h  cache_control.h  cancellation_timer.h  endpoint.h  memory_cache_backend.h  message_queue.h  mime_table.h  multipart_message_body.h  request.h  request_error_code.h  response.h  server_config.h  websocket_connection.h  websocket_event_handler.h  websocket_manager.h
spider2/include/spider2/types/utils/: any_function_adapter.h  async_file_io.h  etag.h  function_traits.h  get_arg.h  guid.h  http_date.h  ignore_result.h  ignore_sig_pipe.h  middleware_chain.h  multipart_message_parser.h  overload.h  resource_status.h  static_lookup_table.h  tag_invoke.h  tuple_algorithms.h  url.h  variant_cast.h
spider2/src/: app_context_base.cpp  base64.cpp  base64.h  byte_range.cpp  cache_control.cpp  etag.cpp  http_date.cpp  memory_cache_backend.cpp  mulitpart_message_body.cpp
spider2/src/posix/: async_file_io.cpp  ignore_sig_pipe.cpp
spider2/src/windows/: async_file_io.cpp  ignore_sig_pipe.cpp
spider2/test-site/: index.html
spider2/tests/: api_request_tests.cpp  async_file_tests.cpp  mime_table_tests.cpp  multipart_parser_tests.cpp  request_routing_tests.cpp  tag_invoke_tests.cpp  tuple_tests.cpp  utils_tests.cpp
